--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ streamlit-pandas-profiling== 0.0.6
 sweetviz==1.1.2
 pandas==1.1.4                   
 pandas-profiling==1.4.1
+textblob==0.15.3
+sumy==0.8.1
+gensim==3.8.3
+spacy==2.3.1
